Fix tests under module system
Using an older version of JUnit platform for now

Also in this commit:

* Renamed all subprojects to be consistent with JPMS
 module project conventions